--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "framer-motion": "^6.4.2",
+    "framer-motion": "^6.4.3",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-transition-group": "^4.4.2",
     "react-youtube": "^9.0.3",
-    "typeit-react": "^2.5.1-alpha.0",
-    "typewriter-effect": "^2.19.0"
+    "typeit-react": "^2.5.1-alpha.0"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
