--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-transition-group": "^4.4.2",
+    "react-use": "^17.4.0",
     "react-youtube": "^9.0.3",
     "typeit-react": "^2.5.1-alpha.0"
   },
